# hwscope

./: .gitignore  HwScope.sln  LICENSE  README.md
docs/: cpu-detail-implementation-plan.md  cpu-detail-page-design.md  cpu-stage2-topology-plan.md  cpu-topology-visualization-plan.md  hardware-preload-design.md  memory-benchmark-design.md  memory-cache-benchmark-implementation-plan.md  memory-spd-detail-implementation-plan.md  memory-spd-detail-page-design.md  pcie-usb-topology-design.md  project-architecture.md  storage-benchmark-design.md  storage-detail-implementation-plan.md  storage-detail-page-design.md  theme-system.md
src/HwScope.App/: App.xaml  App.xaml.cs  AssemblyInfo.cs  HwScope.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  MemoryBenchmarkDiagnosticsWindow.xaml  MemoryBenchmarkDiagnosticsWindow.xaml.cs  MemoryBenchmarkWindow.xaml  MemoryBenchmarkWindow.xaml.cs  StorageBenchmarkDiagnosticsWindow.xaml  StorageBenchmarkDiagnosticsWindow.xaml.cs  StorageBenchmarkWindow.xaml  StorageBenchmarkWindow.xaml.cs
src/HwScope.App.Tests/: HwScope.App.Tests.csproj
src/HwScope.Cli/: HwScope.Cli.csproj  Program.cs
src/HwScope.Core/: HwScope.Core.csproj
src/HwScope.Native.MemoryBench/: CMakeLists.txt  README.md
src/HwScope.Native.MemoryBench/scripts/: build-msvc.ps1
src/HwScope.Native.MemoryBench/src/: main.cpp
src/HwScope.Native.Spd/: CMakeLists.txt  README.md
src/HwScope.Native.Spd/fixtures/: ddr4-udimm-32gb.bad-crc.sample.json  ddr4-udimm-32gb.raw.sample.json  ddr5-sodimm-32gb.sample.json  invalid-hex.sample.json  unknown-spd-type.sample.json
src/HwScope.Native.Spd/scripts/: build-msvc.ps1
src/HwScope.Native.Spd/src/: main.cpp
src/HwScope.Native.StorageBench/: CMakeLists.txt  README.md
src/HwScope.Native.StorageBench/scripts/: build-msvc.ps1
src/HwScope.Native.StorageBench/src/: main.cpp
(+184 files in other folders)
